--- a/CSS3/16_2D 转换-位移.html
+++ b/CSS3/16_2D 转换-位移.html
@@ -38,6 +38,7 @@
             padding: 0 20px;
             margin-left: -70px;
             transform: translate(-50%);
+            transform: translate(50px);
             background-color: goldenrod;
         }
     </style>
