--- a/PC 端静态网页应用开发及项目/lagou/index.html
+++ b/PC 端静态网页应用开发及项目/lagou/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/indexMain.css">
     <link rel="stylesheet" href="css/moduleTabs.css">
     <link rel="stylesheet" href="css/hotRecruit.css">
-    <!-- <link rel="stylesheet" href="css/hotCompany.css"> -->
+    <link rel="stylesheet" href="css/hotCompany.css">
     <link rel="stylesheet" href="css/hotLink.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/copyRight.css">
